--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,20 +12,30 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@fullcalendar/daygrid": "^6.1.11",
+    "@fullcalendar/interaction": "^6.1.11",
+    "@fullcalendar/react": "^6.1.11",
     "@mui/icons-material": "^5.15.16",
     "@mui/material": "^5.15.16",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
     "@mui/x-date-pickers": "^7.2.0",
     "@nivo/line": "^0.85.1",
+    "@syncfusion/ej2-react-schedule": "^25.1.42",
+    "@toast-ui/react-calendar": "^2.1.3",
     "axios": "^1.6.8",
     "dayjs": "^1.11.10",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
+    "react-big-calendar": "^1.12.1",
+    "react-calendar": "^5.0.0",
     "react-datepicker": "^6.8.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-mui-scheduler": "^2.0.4",
     "react-router-dom": "^6.22.3",
-    "styled-components": "^6.1.8"
+    "react-scripts": "^5.0.1",
+    "styled-components": "^6.1.8",
+    "tui-calendar": "^1.15.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
