--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,8 @@
     "@toast-ui/react-calendar": "^2.1.3",
     "axios": "^1.6.8",
     "dayjs": "^1.11.10",
+    "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-big-calendar": "^1.12.1",
