--- a/backend/package.json
+++ b/backend/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.2",
     "colors": "^1.4.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
@@ -11,7 +12,8 @@
     "mongoose": "^8.3.1",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.13",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "python-shell": "^5.0.0"
   },
   "name": "backend",
   "version": "1.0.0",
